--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/custom.min.css" />
+    <link rel="stylesheet" href="css/custom.css" />
     <meta name="Keywords" content="Kalopsia, Design, Furniture, Sligo, Furniure Design, Bespoke, art, Wood, craft, craftmanship, artisan">
     <link rel="shortcut icon" href="images/favicon.ico">
     <title>Kalopsia Design</title>
